# gtkballs

./: .gitattributes  .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README.md  README.russian  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  configure.project  gtkballs.lsm  gtkballs.lsm.in  gtkballs.spec  gtkballs.spec.in  meson.build
doc/: Makefile  Makefile.am  Makefile.in  gtkballs.6x  gtkballs.6x.in
gtkballs-data/: Makefile  Makefile.am  Makefile.in
gtkballs-data/themes/5balls-Big/: blue.xpm  blue_destroy1.xpm  blue_destroy2.xpm  blue_jump1.xpm  blue_jump2.xpm  blue_jump3.xpm  blue_jump4.xpm  blue_jump5.xpm  blue_jump6.xpm  blue_jump7.xpm  blue_jump8.xpm  blue_small.xpm  brown.xpm  brown_destroy2.xpm  brown_destroy3.xpm  brown_jump1.xpm  brown_jump2.xpm  brown_jump3.xpm  brown_jump4.xpm  brown_jump5.xpm  brown_jump6.xpm  brown_jump7.xpm  brown_jump8.xpm  brown_small.xpm  cell..bak.xpm  cell.xpm  cell_bak.xpm  cyan.xpm  cyan_destroy1.xpm  cyan_destroy4.xpm  cyan_jump1.xpm  cyan_jump2.xpm  cyan_jump3.xpm  cyan_jump4.xpm  cyan_jump5.xpm  cyan_jump6.xpm  cyan_jump7.xpm  cyan_jump8.xpm  cyan_small.xpm  destroy5.xpm  (+57 more)
gtkballs-data/themes/Default/: blue_ball.xpm  blue_ball_destroy1.xpm  blue_ball_destroy10.xpm  blue_ball_destroy11.xpm  blue_ball_destroy2.xpm  blue_ball_destroy3.xpm  blue_ball_destroy4.xpm  blue_ball_destroy5.xpm  blue_ball_destroy6.xpm  blue_ball_destroy7.xpm  blue_ball_destroy8.xpm  blue_ball_destroy9.xpm  blue_ball_jump10.xpm  blue_ball_jump11.xpm  blue_ball_jump12.xpm  blue_ball_jump13.xpm  blue_ball_jump14.xpm  blue_ball_jump15.xpm  blue_ball_jump16.xpm  blue_ball_jump2.xpm  blue_ball_jump3.xpm  blue_ball_jump4.xpm  blue_ball_jump5.xpm  blue_ball_jump6.xpm  blue_ball_jump7.xpm  blue_ball_jump8.xpm  blue_ball_jump9.xpm  brown_ball.xpm  brown_ball1.xpm  brown_ball_destroy1.xpm  brown_ball_destroy10.xpm  brown_ball_destroy11.xpm  brown_ball_destroy2.xpm  brown_ball_destroy3.xpm  brown_ball_destroy4.xpm  brown_ball_destroy5.xpm  brown_ball_destroy6.xpm  brown_ball_destroy7.xpm  brown_ball_destroy8.xpm  brown_ball_destroy9.xpm  (+153 more)
gtkballs-data/themes/klines/: blue.xpm  blue_destroy3.xpm  blue_destroy4.xpm  blue_jump1.xpm  blue_jump2.xpm  blue_jump3.xpm  blue_jump4.xpm  blue_jump5.xpm  blue_jump6.xpm  blue_jump7.xpm  blue_jump8.xpm  blue_small.xpm  brown.xpm  brown_destroy1.xpm  brown_destroy4.xpm  brown_jump1.xpm  brown_jump2.xpm  brown_jump3.xpm  brown_jump4.xpm  brown_jump5.xpm  brown_jump6.xpm  brown_jump7.xpm  brown_jump8.xpm  brown_small.xpm  cyan.xpm  cyan_destroy2.xpm  cyan_destroy3.xpm  cyan_jump1.xpm  cyan_jump2.xpm  cyan_jump3.xpm  cyan_jump4.xpm  cyan_jump5.xpm  cyan_jump6.xpm  cyan_jump7.xpm  cyan_jump8.xpm  cyan_small.xpm  destroy8.xpm  destroy9.xpm  green.xpm  green_jump1.xpm  (+44 more)
gtkballs-data/themes/mascots/: break1.xpm  break1des1.xpm  break1des3.xpm  break1des5.xpm  break1des7.xpm  break1des9.xpm  break2.xpm  break3.xpm  break4.xpm  break5.xpm  break6.xpm  break7.xpm  break8.xpm  break_small.xpm  bsd1.xpm  bsd1des1.xpm  bsd1des2.xpm  bsd1des3.xpm  bsd1des4.xpm  bsd1des5.xpm  bsd2.xpm  bsd3.xpm  bsd_small.xpm  coke1.xpm  coke1des1.xpm  coke1des2.xpm  coke1des3.xpm  coke1des4.xpm  coke1des5.xpm  coke2.xpm  coke3.xpm  coke4.xpm  coke5.xpm  coke6.xpm  coke7.xpm  coke8.xpm  coke_small.xpm  daemon1.xpm  daemon1des1.xpm  daemon1des2.xpm  (+49 more)
m4/: ChangeLog  Makefile.am  Makefile.in
po/: ChangeLog  LINGUAS  Makefile  Makefile.in  POTFILES  POTFILES.in  de.gmo  de.po  fr.gmo  fr.po  gtkballs.pot  nl.po  pl.gmo  pl.po  ru.gmo  ru.po  zzpo.sh
src/: Makefile  Makefile.am  Makefile.in  about.c  about.h  child.c  child.h  game.c  game.h  gfx.c  gfx.h  gtkballs.c  gtkballs.h  gtkcompat.h  gtkutils.c  gtkutils.h  halloffame.c  halloffame.h  inputname.c  inputname.h  license.c  license.h  mainmenu.c  mainmenu.h  mainwin.c  mainwin.h  path.c  path.h  preferences.c  preferences.h  prefs.c  prefs.h  rules.c  rules.h  rulesdialog.c  rulesdialog.h  savedialog.c  savedialog.h  savegame.c  savegame.h  (+6 more)
w_conf/: gettext
