dnl Process this file with autoconf to produce a configure script.
dnl $Id: configure.in,v 1.2 1999/11/20 22:30:16 jmv Exp $
AC_INIT(src/gtkballs.c)
AM_INIT_AUTOMAKE(gtkballs, 3.1.5)
AC_SUBST(VERSION)

AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S

AM_GNU_GETTEXT([external])

nlsdir='${prefix}/share/locale'
AC_SUBST(nlsdir)

AM_PATH_GLIB_2_0(2.0.0)
AM_PATH_GTK_2_0(2.0.0)

dnl Checks for header files.
AC_STDC_HEADERS
AC_HAVE_HEADERS(sys/param.h)
AC_HAVE_HEADERS(signal.h)

AC_OUTPUT([gtkballs.lsm
           Makefile
           src/Makefile
           doc/Makefile
           doc/gtkballs.6x
           po/Makefile.in 
           m4/Makefile
           gtkballs.spec
           gtkballs-data/Makefile])
